home page changes

--- a/evd/web/templates/new_ui.html
+++ b/evd/web/templates/new_ui.html
@@ -72,7 +72,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>eVidyaloka</title>
+    <title>eVean Foundation</title>
 
     <script
       type="text/javascript"
@@ -1352,7 +1352,7 @@
                   style="border-radius: 100%"
                 />
               </a> -->
-              <a
+              <!--<a
                 style="padding-top: 0.4rem"
                 class=""
                 href="/"
@@ -1364,7 +1364,11 @@
                   src="https://sunbird.org/images/logo/logo.svg"
                   width="170px"
                 />
-              </a>
+              </a>-->
+              <a style="padding-top:0.7rem" class="" href='/' style="padding-right:0px !important;">
+                <img class="img_css" alt="" src="/static/images/evidyalogo.jpg" width="55px" height="50px" style="border-radius:100%;">
+            </a>
+            <h4 style="text-align: center; margin-bottom: 30px;color: orange;">eVean Foundation</h4>
               <span
                 aria-expanded="false"
                 class="navbar-toggler ml-auto collapsed mt-2"
@@ -1426,34 +1430,6 @@
               </ul>
             </div>
             <div class="col-sm-3" style="display: inline-flex">
-              <a
-                style="padding-top: 0.7rem"
-                class=""
-                href="/"
-                style="padding-right: 0px !important"
-              >
-                <img
-                  class="img_css"
-                  alt="evidyaloka logo"
-                  src="/static/images/evidyalogo.jpg"
-                  width="55px"
-                  height="50px"
-                  style="border-radius: 100%"
-                />
-              </a>
-              <a
-                style="padding-top: 0.4rem"
-                class=""
-                href="/"
-                style="padding-left: 0px !important"
-              >
-                <img
-                  class="img_css1"
-                  alt="evidyaloka banner"
-                  src="/static/images/evidyaban_1000x250.png"
-                  width="275px"
-                />
-              </a>
               <span
                 aria-expanded="false"
                 class="navbar-toggler ml-auto collapsed mt-2"
