--- a/evd/web/templates/eveans_home.html
+++ b/evd/web/templates/eveans_home.html
@@ -183,12 +183,13 @@
 
 
                 <!--      <div class="col-md-2 col-sm-3" style="display:inline-flex;"> -->
-                <div class="col-md-5 col-sm-3" style="display:flex;">
+                <div class="col-md-3 col-sm-3" style="display:flex;">
                     <!--        <ul class="nav navbar-nav ec-nav__navbar " style="display:inline-flex;"> -->
                     <!--        <li class="nav-item nav-item__has-megamenu megamenu-col-2"> -->
                     <a style="padding-top:0.7rem" class="" href='/' style="padding-right:0px !important;">
                         <img class="img_css" alt="" src="/static/images/evidyalogo.jpg" width="55px" height="50px" style="border-radius:100%;">
                     </a>
+                    <h4 style="text-align: center; margin-bottom: 30px;color: orange;">eVean Foundation</h4>
                     <!--          </li> -->
                     <!--           <li class="nav-item nav-item__has-megamenu megamenu-col-2"> -->
                     <!--<a style="padding-top:0.4rem" class="" href='/' style="padding-left:0px !important;">
@@ -263,6 +264,9 @@
                               >About ▼</a
                             >
                             <div class="dropdown-menu">
+                                <a class="dropdown-item" href="https://serve.sunbird.org/explore/overview/"
+                                >SERVE Overview</a
+                              >
                               <a class="dropdown-item" href="/about/"
                                 >eVidyaloka Overview</a
                               >
@@ -359,9 +363,9 @@
         <div class="row" style="margin-top:-40px">
             <div class="col-sm-12 overlay-text">
                 <div class="vertical-align">
-                    <h2 class="about_h mobileView" style="text-align: center; margin-bottom: 30px;color: orange;"><b>eVidyaloka education for all network <br>(eVean) Foundation</b></h2>
+                    <h2 class="about_h mobileView" style="text-align: center; margin-bottom: 30px;color: orange;"><b>eVean (eVidyaloka education for all network) Foundation</b></h2>
                     <p class="about_p mobileView"><b>
-                        eVidyaloka education for all network (eVean) Foundation is a not for profit organisation, a Section 8 company under Companies Act, 2013. A social enterprise evolved from the model of eVidyaloka towards transforming the educational landscape of rural India. With a national shortage of 1.2 million teachers, the remote online learning-teaching model is extended as a platform, empowering the stakeholders directly, through a viable social business model, as a digital public good and  there by creaing a sustainable impact at scale, reaching the 230 million children of public education system.
+                        eVean (eVidyaloka education for all network) Foundation is a not for profit organisation, a Section 8 company under Companies Act, 2013. A social enterprise evolved from the model of eVidyaloka towards transforming the educational landscape of rural India. With a national shortage of 1.2 million teachers, the remote online learning-teaching model is extended as a platform, empowering the stakeholders directly, through a viable social business model, as a digital public good and  there by creaing a sustainable impact at scale, reaching the 230 million children of public education system.
                     </b></p>
                     <p class="mobileView mobile_p2"></b>
                         History : Incorporated in the year 2019, eVean Foundation is formed by founding board members - Vishwanathan T, Ramkumar V and Venkat Sriraman.
@@ -1002,7 +1006,7 @@
 About Section
     ================================================== -->
 <section id="about" class="content text-center" style="background:#f2f1f1">
-    <h2 style='font-weight:normal;color:#194961 !important;'>Sunbird Serve</h2>
+    <h2 style='font-weight:normal;color:#194961 !important;'>SERVE</h2>
     <div class="container">
 
         <div class="row">
@@ -1012,13 +1016,14 @@ About Section
                 <div class="col-sm-12 overlay-text">
                     <div class="vertical-align">
                         <p class="about_p mobileView">
-                            The Online Teaching-Learning platform is now available as an open-source platform known as Serve-Beta under the MIT license. This platform provides a unique opportunity to create a new paradigm of volunteer-to-volunteer interactions, leading to the development of a societal network of volunteering systems.
+                            The Online Teaching-Learning platform is now available as an open-source platform known as SERVE under the MIT license. This platform provides a unique opportunity to create a new paradigm of volunteer-to-volunteer interactions, leading to the development of a societal network of volunteering systems.
                         </p>
                         <p class="about_p mobileView">
-                            The Serve Beta platform offers a streamlined approach to volunteer interactions that can significantly benefit society and support human development. This platform enables various stakeholders to crowdsource volunteers for their specific needs and participate in interactions to achieve these goals. The Serve Beta platform provides a range of features such as Reference Solution, Volunteering Registries, and Volunteer Services to enable Request, Assignment, Nominations, and Management of Needs and Deliverables. With these capabilities, the platform helps manage and track volunteer engagement in a more efficient and effective manner.
+                            The SERVE platform offers a streamlined approach to volunteer interactions that can significantly benefit society and support human development. This platform enables various stakeholders to crowdsource volunteers for their specific needs and participate in interactions to achieve these goals. The SERVE platform provides a range of features such as Reference Solution, Volunteering Registries, and Volunteer Services to enable Request, Assignment, Nominations, and Management of Needs and Deliverables. With these capabilities, the platform helps manage and track volunteer engagement in a more efficient and effective manner.
                         </p>
                         <button class="my-button" onclick="window.open('https://serve.sunbird.org/', '_blank')">Know More</button>
-                        <button class="my-button" onclick="window.open('https://serve.evean.net/', '_blank')">Serve Sandbox</button>
+                        <button class="my-button" onclick="window.open('https://serve.evean.net/', '_blank')">SERVE Sandbox</button>
+                        <button class="my-button" onclick="window.open('https://github.com/orgs/Sunbird-Serve/repositories', '_blank')">SERVE Source Code</button>
                     </div>
                 </div>
 
