serve sandbox page changes

--- a/evd/web/templates/new_ui_home.html
+++ b/evd/web/templates/new_ui_home.html
@@ -62,14 +62,14 @@
 
     <div class=" p-8 rounded flex items-start text-green-600 my-4 shadow-lg mx-auto">
         <div class="px-3">
-          <h3 class="text-green-800 font-semibold tracking-wider text-center text-lg md:text-4xl">What is Sunbird Serve?</h3>
+          <h3 class="text-green-800 font-semibold tracking-wider text-center text-lg md:text-4xl">What is SERVE?</h3>
           <p class="py-2 text-green-700  text-justify">
             The platform offers an opportunity to introduce a new paradigm of Volunteer 
             to Volunteer interactions, followed by multiple actors coming together and 
             leading to a societal network of volunteering systems.
           </p>
           <p class="py-2 text-green-700  text-justify">
-              Serve Beta platform can enable efficient volunteer interactions that add significant 
+              SERVE platform can enable efficient volunteer interactions that add significant 
               value to society and overall human development. It enables relevant actors to crowdsource 
               volunteers for their needs and participate in interactions towards realization of the value.
               
@@ -95,7 +95,7 @@
         ENABLE TECH FOR VOLUNTEERING.
         </h3>
         <p class="py-2 pt-4 text-green-700">
-            You can adopt serve platform through our MIT licensed open source repository or can register as a partner in serve platform.
+            You can adopt SERVE platform through our MIT licensed open source repository or can register as a partner in SERVE platform.
         </p>
       </div>
       <div class="pt-8 flex flex-row items-center justify-center">
