added evean overview

--- a/evd/web/templates/new_ui.html
+++ b/evd/web/templates/new_ui.html
@@ -1415,6 +1415,9 @@
                     >About</a
                   >
                   <div class="dropdown-menu">
+                    <a class="dropdown-item" href="https://serve.evean.net/evean/"
+                      >eVean Overview</a
+                    >
                     <a class="dropdown-item" href="https://www.sunbird.org/about-us"
                       >Sunbird Overview</a
                     >
